<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="titleScreenBar">Total Entry</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="calculate">Calculate</string>
    <string name="previous">Recaluclate</string>

    <string name="title_screen_tip_calculator">Tip Calculator</string>
    <string name="tipEntryBox">Enter Pre-tax total</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="preTaxAmount">Pre-Tax Amount</string>
    <string name="tipCaption">A simple tip Calculator</string>
    <string name="includeTax">Include tax in tip calculation</string>
    <string name="roundToDollar">Round up to nearest dollar</string>
    <string name="gratuityIncluded">Gratuity already included</string>
    <string name="informationButton">Information</string>
    <string name="howMuchToTip">Here\'s how much you should tip:</string>
    <string name="happy">happy</string>
    <string name="neutral">neutral</string>
    <string name="okay">okay</string>
    <string name="highPercent">Great Tip: </string>
    <string name="mediumPercent">Good Tip: </string>
    <string name="lowPercent">Okay Tip: </string>
</resources>